--- a/advantagescopeassets/Robot_StackUp/config.json
+++ b/advantagescopeassets/Robot_StackUp/config.json
@@ -1,7 +1,7 @@
 {
   "name": "StackUp",
   "sourceUrl": "string",
-  "disableSimplification": false,
+  "disableSimplification": true,
   "rotations": [
     {
       "axis": "x",
@@ -79,7 +79,7 @@
   "components": [
     {
       "zeroedRotations": [
-        {
+      	{
           "axis": "x",
           "degrees": 90
         },
@@ -96,7 +96,7 @@
     },
     {
       "zeroedRotations": [
-        {
+      	{
           "axis": "x",
           "degrees": 90
         },
@@ -109,6 +109,23 @@
         -0.088900,
         0,
         -0.120650
+      ]
+    },
+    {
+      "zeroedRotations": [
+      	{
+      		"axis": "x",
+      		"degrees": 90
+      	},
+      	{
+      		"axis": "z",
+      		"degrees": 180
+      	}
+      ],
+      "zeroedPosition": [
+	      -0.009102,
+	      0.104775,
+	      -0.593223
       ]
     }
   ]
