--- a/advantagescopeassets/Robot_StackUp/config.json
+++ b/advantagescopeassets/Robot_StackUp/config.json
@@ -120,12 +120,16 @@
         {
           "axis": "z",
           "degrees": 180
+        },
+        {
+          "axis": "y",
+          "degrees": 25
         }
       ],
       "zeroedPosition": [
-        -0.009102,
+        -0.259,
         0.104775,
-        -0.593223
+        -0.543223
       ]
     },
     {
@@ -137,12 +141,16 @@
         {
           "axis": "z",
           "degrees": 180
+        },
+        {
+          "axis": "y",
+          "degrees": 25
         }
       ],
       "zeroedPosition": [
-        0.009102,
+        -0.259,
         -0.104775,
-        -0.593223
+        -0.543223
       ]
     }
   ]
