--- a/advantagescopeassets/Robot_Redundancy/config.json
+++ b/advantagescopeassets/Robot_Redundancy/config.json
@@ -169,6 +169,23 @@
         0.0,
         0.0
       ]
+    },
+    {
+      "zeroedRotations": [
+        {
+          "axis": "x",
+          "degrees": 90
+        },
+        {
+          "axis": "z",
+          "degrees": 180
+        }
+      ],
+      "zeroedPosition": [
+        0.0,
+        0.0,
+        0.0
+      ]
     }
   ]
 }
