refactor vision subsystem: update CameraIO interface for improved data handling and add robot state periodic updates

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
   "editor.tokenColorCustomizations": {
     "comments": "",
     "textMateRules": []
-  }
+  },
+  "java.debug.settings.onBuildFailureProceed": true
 }
