--- a/build.gradle
+++ b/build.gradle
@@ -222,7 +222,7 @@ dependencies {
     implementation wpi.java.deps.wpilib()
     implementation wpi.java.vendor.java()
     implementation 'org.jgrapht:jgrapht-core:1.5.1'
-
+    implementation 'org.jgrapht:jgrapht-io:1.5.1'
 
     roborioDebug wpi.java.deps.wpilibJniDebug(wpi.platforms.roborio)
     roborioDebug wpi.java.vendor.jniDebug(wpi.platforms.roborio)
